# dz2

./: .gitignore  CMakeLists.txt  README.md  hit.cpp  main.cpp  map.cpp  player.cpp  sfml-app  ship.cpp  test.cpp
headers/: hit.h  hitnohit.h  map.h  player.h  ship.h
